# swarm_empire_old

./: Jenkinsfile  README.md  sonar-project.properties
cdci/: Dockerfile  docker-compose.yml
client/: angular.json  karma.conf.js  package-lock.json  package.json
client/src/: index.html  styles.scss
client/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
client/src/app/auth/: auth-routing.module.ts
client/src/app/auth/components/login/: login.component.ts
client/src/app/core/: core.module.ts
client/src/app/core/components/header/: header.component.html
client/src/app/empire/: empire-routing.module.ts  empire.component.html  empire.component.ts  empire.module.ts
client/src/app/empire/components/empire/: empire.component.html  empire.component.spec.ts
client/src/app/empire/components/empire-home/: empire-home.component.spec.ts  empire-home.component.ts
client/src/app/empire/components/navbar/: navbar.component.html  navbar.component.ts
client/src/app/landing-page/: landing-page.component.ts  landing-page.module.ts
client/src/app/landing-page/components/header/: header.component.html  header.component.scss
client/src/app/landing-page/components/home-page/: home-page.component.html  home-page.component.ts
client/src/app/landing-page/components/landing-page/: landing-page.component.html  landing-page.component.scss  landing-page.component.ts
server/: .gitignore  pyproject.toml
server/swarm_empire/: manage.py
server/swarm_empire/swarm_empire/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
